deployments/default/pihole/pihole-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: pihole
  name: pihole-dns-loadbalancer
  namespace: default
spec:
  ports:
    - name: dns
      protocol: TCP
      port: 53
      targetPort: dns
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
