deployments/default/pihole/pihole-dns-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: pihole-dns-ingress
  namespace: default
spec:
  entryPoints:
    - dnstcp
  routes:
  - kind: Rule
    match: HostSNI(`pihole.home.a6.io`)
    priority: 0
    services:
    - kind: Service
      name: pihole-tcp
      port: 53
